@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -bug: Adjust for problematic responses from some SNMPT Agents.
 -bug: Improve logging in cmd.php and poller.php when parameters are not specified correctly.
 -feature: Add rra_path as a config.php config variable
+-feature: Add drop down actions to data queries
 
 0.8.6j
 -bug#0000842: SNMPv3 password field does not check if entered passwords match.
